{doc} added swagger
using spring-doc starter 2.8.5 downgrade the openapi to 3.0.0