@@ -1,5 +1,9 @@
 package org.kj6682.book;
 
+import jakarta.transaction.Transactional;
+import org.kj6682.book.domain.Author;
+import org.kj6682.book.domain.AuthorRepository;
+import org.kj6682.book.domain.Book;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.boot.CommandLineRunner;
@@ -8,24 +12,21 @@ import org.springframework.boot.autoconfigure.SpringBootApplication;
 
 import org.springframework.context.annotation.Profile;
 import org.springframework.context.annotation.Bean;
-import org.springframework.web.servlet.LocaleResolver;
-import org.springframework.web.servlet.config.annotation.InterceptorRegistry;
-import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
-import org.springframework.web.servlet.i18n.LocaleChangeInterceptor;
-import org.springframework.web.servlet.i18n.SessionLocaleResolver;
 
-import java.util.Arrays;
-import java.util.Locale;
+import java.util.List;
+import java.util.Set;
 
 
 @SpringBootApplication
-public class BookApplication implements WebMvcConfigurer {
+public class BookApplication {
 
     private static final Logger log = LoggerFactory.getLogger(BookApplication.class);
     private final BookService bookService;
+    private final AuthorRepository authorRepository;
 
-    public BookApplication(BookService bookService) {
+    public BookApplication(BookService bookService, AuthorRepository authorRepository) {
         this.bookService = bookService;
+        this.authorRepository = authorRepository;
     }
 
     public static void main(String[] args) {
@@ -34,9 +35,10 @@ public class BookApplication implements WebMvcConfigurer {
 
     @Bean
     @Profile("init-postgres")
+    @Transactional
     public CommandLineRunner demo(BookService bookService) {
         return (args) -> {
-            bookService.deleteAll();
+            //bookService.deleteAll();
             // Save a few books with a list of authors
             initializeDatabase();
             // Fetch all books
@@ -56,37 +58,24 @@ public class BookApplication implements WebMvcConfigurer {
         };
     }
 
-    private void initializeDatabase() {
-        bookService.saveAll(Arrays.asList(
-                new Book("9780061120084", "To Kill a Mockingbird", Arrays.asList("Harper Lee"), "ST01.01"),
-                new Book("9780451524935", "1984", Arrays.asList("George Orwell"), "ST01.02"),
-                new Book("9780618260300", "The Hobbit", Arrays.asList("J.R.R. Tolkien"), "ST01.03"),
-                new Book("9780140449136", "The Lord of the Rings", Arrays.asList("J.R.R. Tolkien"), "ST01.04"),
-                new Book("9780060935467", "To Kill a Mockingbird", Arrays.asList("Harper Lee", "Another Author"), "ST01.05")
+    @Transactional
+    public void initializeDatabase() {
+        Author author1 = new Author("Harper Lee");
+        Author author2 = new Author("George Orwell");
+        Author author3 = new Author("J.R.R. Tolkien");
+        Author author4 = new Author("Franz Kafka");
+
+        authorRepository.saveAll(List.of(author1, author2, author3, author4));
+
+        bookService.saveAll(List.of(
+                new Book("9780061120084", "To Kill a Mockingbird", Set.of(author1), "ST01.01"),
+                new Book("9780451524935", "1984", Set.of(author2), "ST01.02"),
+                new Book("9780618260300", "The Hobbit", Set.of(author3), "ST01.03"),
+                new Book("9780140449136", "The Lord of the Rings", Set.of(author3), "ST01.04"),
+                new Book("9780060935467", "Great Anthology of Short Stories", Set.of(author4, author3, author2, author1), "ST01.05")
         ));
     }
 
-    @Bean
-    public CustomizedErrorAttributes errorAttributes() {
-        return new CustomizedErrorAttributes();
-    }
 
-    @Bean
-    public LocaleResolver localeResolver() {
-        SessionLocaleResolver slr = new SessionLocaleResolver();
-        slr.setDefaultLocale(Locale.ITALIAN);
-        return slr;
-    }
 
-    @Bean
-    public LocaleChangeInterceptor localeChangeInterceptor() {
-        LocaleChangeInterceptor lci = new LocaleChangeInterceptor();
-        lci.setParamName("lang");
-        return lci;
-    }
-
-    @Override
-    public void addInterceptors(InterceptorRegistry registry) {
-        registry.addInterceptor(localeChangeInterceptor());
-    }
 }
